version/3.0/ripscrip/2.0-color-modes-and-palettes.md
# 2.0 Color Modes & Palettes

[◀ Prev: 1.4 Terminal & ANSI View](1.4-terminal-ansi-view.md) · [Contents](README.md) · [Next: 2.1 Lines ▶](2.1-lines.md)

_Reconstructed edition - every claim carries an evidence tag; see [Contents](README.md) for the legend._

Color in RIPscrip 3.x as it shipped in RIPtel: the 256-entry Drawing Palette, the palette-mapping and direct-RGB color modes, the desktop and drawing palette commands, and the write-mode raster operations.

[Shipped limits](#shipped-limits-of-the-30-driver) · [Color translation](#color-palettes-and-hardware---color-translation) · [The Drawing Palette](#the-drawing-palette) · [Palette mapping and direct RGB](#palette-mapping-and-direct-rgb-mode) · [Default palette values](#default-rgb-values-of-color-lookup-table) · [Palette commands](#rip_set_palette) · [Write modes](#rip_write_mode)

_The 16-color 1.54 model this extends is [2.0 in the v1.54 reference](../../1.54/ripscrip/2.0-colors-and-attributes.md); renderer-side palette/DAC scaling details are in the [2.0 canvas, palette & RGB techspec](../../2.0/techspecs/2.0-canvas-palette-rgb.md)._

## Shipped Limits of the 3.0 Driver

_Evidence: HLP._

The 3.0.7 driver's error strings pin the concrete limits of the shipping engine:

| Limit | Error-string evidence |
| --- | --- |
| Palette indices 0-255 | "Color palette base is out of range (>255)" |
| Max **256 colors** per palette command | "Too many colors in color palette command (>256)" |
| Legacy system-palette color values 0-63 | "Invalid system palette color value (>63)" |
| Direct RGB: **8 bits per channel only** | "Invalid number of bits for RGB value (must be 8)", "RGB color mode only supports 8-bit color currently" |
| Palette animation supported | "Unable to animate palette" |
| Fill pattern values ≤255 | "Pattern value exceeds 255" |

The 0-63 system-palette range is the 1.54 desktop palette living on: the old [RIP_SET_PALETTE](#rip_set_palette)/[RIP_ONE_PALETTE](#rip_one_palette) commands still address 64 EGA master colors with the bit-swapped 2-bit RGB encoding, and remain supported for backward compatibility - the corpus's 1.54-style artwork still uses them (`a` in LANDSCPE.RIP).

## Color Palettes and Hardware - Color Translation

_Added in RIPscrip v2.A0; revised in v2.A4._

_Evidence: 2.00a4._

With versions of RIPscrip prior to v2.0, the color palette was limited to 16 colors maximum out of a total of 64 colors in the Master Color Palette. This was due to the hardware origins of the language in its initial releases. With the popularity of higher color video sub-systems, RIPscrip needed to grow to accomodate these advancing trends. In addition, it needed to be open-ended enough to accomodate yet unknown hardware environments that might provide for even higher color resolution.

The 1.xx RIPscrip specification provided for 16 colors out of a palette of 64 colors. This 64 color palette corresponded to 2-bits of Red, Green and Blue information each, giving you four levels of color saturation in each of the three categories. Unlike typical RGB implementations the color palette entry numbers are not sequentially ordered based on the R, G and B components. The bit-layouts of the color values as follows:

```text
                       Primary    Secondary
                     ├─────────┤ ├─────────┤
            ╔═══╤═══╦═══╤═══╤═══╦═══╤═══╤═══╗
            ║▒▒▒│▒▒▒║   │   │   ║   │   │   ║
            ║▒▒▒│▒▒▒║ R │ G │ B ║ r │ g │ b ║
            ║▒▒▒│▒▒▒║   │   │   ║   │   │   ║
            ╚═══╧═══╩═══╧═══╧═══╩═══╧═══╧═══╝
              80  40  20  10  8   4   2   1  (hex)
              7   6   5   4   3   2   1   0  (position)
```

Notice that each of the R, G and B sections are broken up into two separate bit sections in the color palette entry number. Also, the bits are reversed when they are encoded. Let's look at four separate colors of Red, Green and Blue to see how the bit patterns correspond to the actual Palette entries:

| Level | RED xxRGBrgb | RED Value | GREEN xxRGBrgb | GREEN Value | BLUE xxRGBrgb | BLUE Value |
| --- | --- | --- | --- | --- | --- | --- |
| 00 | 00000000 | 0 | 00000000 | 0 | 00000000 | 0 |
| 01 | 00100000 | 32 | 00010000 | 16 | 00001000 | 8 |
| 10 | 00000100 | 4 | 00000010 | 2 | 00000001 | 1 |
| 11 | 00100100 | 36 | 00010010 | 18 | 00001001 | 9 |

The base 16 color palette in RIPscrip 1.54 and earlier was modified by the [RIP_SET_PALETTE](#rip_set_palette) and [RIP_ONE_PALETTE](#rip_one_palette) commands. These commands are limited to a maximum of 16 colors and only accomodate 2-bits for each color component. These commands are here on out referred to as the "desktop palette" alteration commands and are only designed to make "simple" changes to the lowest 16 colors with a limited set of color saturation in each of the red, green and blue components.

Under RIPscrip 2.0 and later, we deal with the concept of a 256-entry color lookup table (otherwise known as the drawing palette). This palette of RGB colors is used to cross-reference a particular color number to some arbitrary RGB color combination much like the earlier 1.xx palette counterparts, but with some more important differences. The newer set palette commands allow you to specify the number of bits for each red, green and blue component, and in addition, the internal layout of each RGB value isn't encoded in a seemingly haphazard fashion. A color value is a raw binary number without any frills or complications. If the bit value were 00100100 then the actual color saturation level would be 36, not encoded in a strange bit swapped fashion as in the older color palette commands. It is prophesized that the older color palette commands will not be used much (if at all) in the newer 2.0 environments due to their complexity - about the only way that the older commands will be used is via software packages that only output colors in the older syntax.

Since RIPscrip 1.54 and earlier didn't know about the 256-entry color lookup table, we have introduced two new color palette commands:

- [RIP_ONE_DRAWING_PALETTE](#rip_one_drawing_palette) - Set one color in the drawing palette to an arbitrary RGB color combination.
- [RIP_SET_DRAWING_PALETTE](#rip_set_drawing_palette) - Set a block of colors in the drawing palette to some set of arbitrary RGB color values.

These commands supercede the older 1.54 commands and are much more flexible. They not only allow you to access the entire 256-entry color lookup table, but they allow you to specify how many bits of precision of RGB component data are used in the RGB encoded data.

No matter what hardware configuration your actual RIPscrip software is running under, there is some low-level inherent bit-precision for each RGB color component (whether it be 2 bits each, 4, 6, 8 or more bits per color component). With this in mind, the actual "set palette" commands need to internally convert any RGB color values to the "native" values of the target operating system's graphics environment. The actual discussion of this goes beyond the scope of this document, however the actual conversion should be rather trivial.

Supporting the older 1.54 "set palette" commands that modify the lower 16 color of the drawing palette are also just as trivial. All you need to do is map the 4 levels of RGB data to target values in the native graphics environment and you're done. For example, if your target environment has 6 bits of precision (0-63), then your 2-bit to 6-bit conversions might be something like this (a simple bit shift operation):

| 2-bit | 6-bit |
| ----- | ----- |
| 0     | 0     |
| 1     | 16    |
| 2     | 32    |
| 3     | 48    |

This is an overly simplistic example, and if you notice that the 6-bit range goes from 0-63, not 0-48! With this in mind, a simple bit shift operation (eg, shifting left 4 bits or multiplying by 16) in this example doesn't get the job done just right - a full intensity BLUE component (value 3 in 2-bit components) maps to a value of 48 in 6-bit components which is not a full-intensity blue). What you need to do is take the maximum target value (63 in this example), and divide it by the maximum value of the source range (3). This yields a value of 21. So, our range would evaluate to the following based on this new algorithm:

| 2-bit | 6-bit (x21) |
| ----- | ----------- |
| 0     | 0           |
| 1     | 21          |
| 2     | 42          |
| 3     | 63          |

This gives a perfectly proportioned range where each division in the target color range is evenly spaced and covers the base (black) and the top (purest color) perfectly.

If you considered another example of 8-bit target colors, this rule still applies - 255 / 3 = 85, which is our division as in the following 2 to 8 bit table:

| 2-bit | 8-bit (x85) |
| ----- | ----------- |
| 0     | 0           |
| 1     | 85          |
| 2     | 170         |
| 3     | 255         |

This same algorithm should work relatively well for any color component mapping operation from any bit precision to another where the source bit precision is less than the target's precision. Some "fractional" component operations may need to be performed to compensate for non-integral divisions, but this shouldn't pose any problems in a real-world scenario. In fact, this same algorithm can equally be used by the 2.0 extended "set palette" commands to map the RGB color component values to the actual "bit precision" of the target graphics environment's video hardware.

If the source's bit precision is greater than the target's, then a simple right bit shift operation would accomplish the job without yielding any "uneven" divisions in the target environment's color components (eg, if you had 3-bit color values and a 2-bit target environment, shifting the values right by one bit (dividing by 2) would give you the perfect results. Here's the translation table so that you can see this alternative algorithm at work:

| 3-bit | 2-bit (÷2) |
| ----- | ---------- |
| 0     | 0          |
| 1     | 0          |
| 2     | 1          |
| 3     | 1          |
| 4     | 2          |
| 5     | 2          |
| 6     | 3          |
| 7     | 3          |

### The Drawing Palette

_Added in RIPscrip v2.A4._

_Evidence: 2.00a4; HLP._

Now that we've discussed how to translate an RGB color from one environment to another, now let's discuss the larger picture as far as RIPscrip is concerned: The Drawing Palette.

The Drawing Palette in RIPscrip is a table of 256 entries, where each entry is a set of RGB color component values. This table is a mechansim to "map" color codes (from 0-255) to arbitrary RGB color values.

It may be distinctly possible that the RIPscrip software is running in an environment that allows for an actual "color palette". If this is the case then this color lookup table will match the color palette of the video hardware entry-for-entry. Color 5 in the lookup table would correspond with color 5 in the video system's hardware color palette. This works for environments where the color palette is "completely redefinable". What this means is that the RIPscrip software can completely control the entire video hardware color palette.

It is also very possible that the RIPscrip software could be running on a video system that cannot support 256 simultaneous colors, and only has a color palette of smaller size (typically 16 colors). In this case, the lowest 16 colors (the desktop palette) would typically map one-for-one with the actual hardware color palette, although the programmer might opt to choose a more intelligent approach of color selection based on color distribution. This rather complex issue goes beyond the scope of this discussion and it is recommended that for simplicity, the lowest 16 colors of the drawing palette be mapped to the target palette.. This again, assumes that the RIPscrip software has complete control over the video color palette system and can change any or all of the entries at its discretion.

There are two other important situations that can occur:

1. The video hardware doesn't have a color palette (eg, its a 24-bit color system and doesn't have an actual palette), or
2. The operating system is running in an environment with only a certain number of colors (eg, 256, 16, etc), but you cannot redefine any or them, or you can only redefine some of them (eg, Microsoft Windows under many configurations, etc).

Situation #1 is the easiest to work with. You don't have an actual color palette to modify, so any color values (from 0-255) simply lookup the RGB data in the color lookup table and use that raw color component data to set the color of the current drawing operation. In this manner, the lookup table is "pretending" to be a hardware video palette. This is a situation where having the lookup table is very important. It isn't extremely important when you have a one-to-one mapping of lookup colors to actual hardware color palette colors because the lookup table does the exact same thing as the hardware color palette. But, in modes where you have no palette, this information becomes vital. In practice, this local lookup table aids in color translation of image files (JPEG, GIF, BMP, etc), and also aids in color translation in other situations.

Situation #2, where you don't have complete control over the target video palette is much more complicated. For example, under Microsoft Windows, you typically cannot redefine the colors black or white. This gives you only a sub-set of the actual palette to work with. Also, other applications in the environment may have "locked" several entries in the color palette for their own exclusive use. This can reduce your target color palette even further. How you handle which colors in the lookup table to "activate" (if any), and in what order you activate them is entirely up the discretion of the programmer(s) of the RIPscrip package dealing with this kind of environment. The topic of algorithms for this situation goes completely beyond the scope of this RIPscrip specification. Suffice it to say that the programmer would have to determine some way of mapping the lookup table to a suitable set of colors in the actual destination color environment. If he uses strange methods of dithering (like Windows does), or other mechanisms to achieve the desired color to the user, so be it.

### Palette Mapping and Direct RGB Mode

_Added in RIPscrip v2.A4._

_Evidence: 2.00a4; HLP; corpus._

Under RIPscrip 2.0 and later, you have two methods of specifying color values. You have already seen how colors can be specified by a color index number into the color lookup table (from 0-255). What RGB color that actually maps to is based on the contents of that entry in the actual color lookup table. This is called "Palette mapping mode". In palette mapping mode, most locations in RIPscrip commands that allow for color values take a color number (from 0-255) which references some RGB value in the color lookup table.

We also allow for another mode in RIPscrip, called "Direct RGB Encoding". This mode allows you to specify actual "raw RGB" values instead of color lookup table indices. When a direct RGB value is found, it is decoded (ie, breaking up the red, green and blue components) and is used for the actual color. What happens at this particular moment depends on the environment that the RIPscrip software is running under.

If the software is running in an environment with a color palette, where the hardware video palette is set to some combination of the colors used in the color lookup table, then the RGB encoded data is matched to the "closest" color in the actual target hardware video palette and that color number is actually used. Under many situations, this color value will be the same one as used in the actual color lookup table (for situations where the software is running on a 256-color palette environment with complete control over the hardware palette). Under modes that are more limited, but where a hardware palette is still being used, the same algorithm can still be applied - but there won't be a one-to-one mapping of color lookup table values to the hardware palette. This is unavoidable and in the case of direct RGB encoding, irrelevant.

If the software is running in an environment like 24-bit mode, then life couldn't be simpler. Simply take the color value and use its RGB components (possibly with some color component remapping), and and activate that color in the environment.

Direct RGB encoding mode, unlike palette mapping mode, allows you to specify the bit-precision of RGB color codes used subsequently in RIPscrip code (where direct RGB colors are permitted - not all RIPscrip commands permit direct RGB encoded color codes). This allows you to have color values with the same flexibility as "set color palette" commands, where you can specify arbitrary precisions of RGB data to potentially accomodate high-end color systems like 24-bit, 16-bit, 15-bit, etc).

By default, RIPscrip operates in palette mapping mode, Whenever a reset operation occurs (any type of reset), palette mapping mode is once again re-enabled. In order to go to RGB encoding mode, you must explicitly specify a [RIP_SET_COLOR_MODE](#rip_set_color_mode) command, or a `$COLORMODE()$` text variable to activate direct RGB encoding mode. When you specify direct RGB encoding mode, you indicate how many bits of precisions to allow for each red, green and blue component. This value is used for all three components. For example, if you specify 8 bits of precision for each component, then combined they will amount to 24 bits of RGB data (eg, 24-bit mode). This is unlike some unusual environments on the IBM-PC where 16-bit modes (5 red, 6 green and 5 blue bits) are allowed on some VGA environments.

When a direct RGB encoded color value is received, it is decoded uniformly based on the N bits of precision. Blue is always in the lowest N bits of the RGB value, then green, then red in the highest bits. Let's say we have an 8-bit RGB encoded value of 04140D hexadecimal. Given this hexadecimal number, we would have the bit pattern of "000001000001010000001100". Breaking this up into 8-bit groups, we would have the following in binary, hexadecimal and decimal:

|             | RED      | GREEN    | BLUE     |
| ----------- | -------- | -------- | -------- |
| binary      | 00000100 | 00010100 | 00001100 |
| hexadecimal | 04h      | 14h      | 0Dh      |
| decimal     | 4        | 20       | 12       |

Given that we are working with 8-bit components (from 0-255), this would yield a very dark shade of cyan (approximately).

**The shipped reality.** The 2.00a4 design allowed arbitrary per-component precision; the 3.0.7 driver accepts **only 8 bits per channel** (24-bit values), per the HLP error strings above. The RIPtel demo prologue sets `M08` - palette-mode operation declared with 8-bit components - in 90 of 116 scripts. On palette hardware a direct-RGB color is matched to the closest available palette color; on 24-bit hardware it is used exactly. Palette-less (24-bit) environments treat the drawing palette purely as a lookup table for index-mode colors.

### Default RGB Values of Color Lookup Table

_Added in RIPscrip v2.A1; revised in v2.A4._

_Evidence: 2.00a4._

When a reset command is executed, all unprotected color palette data table entries are reset to some suitable default values. The exact RGB values used in this default color palette table are listed below. In this table, we list the values with six bits of precision for red, green and blue. This is a carefully calculated color palette designed to be of optimal use both in 16 color modes, and in 256 color modes.

_Each row lists the RGB values for six consecutive palette entries, beginning at the entry number in the Num column._

| Num | R | G | B | R | G | B | R | G | B | R | G | B | R | G | B | R | G | B |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| 0 | 0 | 0 | 0 | 0 | 0 | 42 | 0 | 42 | 0 | 0 | 42 | 42 | 42 | 0 | 0 | 42 | 0 | 42 |
| 6 | 42 | 21 | 0 | 42 | 42 | 42 | 21 | 21 | 21 | 21 | 21 | 63 | 21 | 63 | 21 | 21 | 63 | 63 |
| 12 | 63 | 21 | 21 | 63 | 21 | 63 | 63 | 63 | 21 | 63 | 63 | 63 | 0 | 0 | 0 | 4 | 4 | 4 |
| 18 | 8 | 8 | 8 | 13 | 13 | 13 | 17 | 17 | 17 | 21 | 21 | 21 | 25 | 25 | 25 | 29 | 29 | 29 |
| 24 | 34 | 34 | 34 | 38 | 38 | 38 | 42 | 42 | 42 | 46 | 46 | 46 | 50 | 50 | 50 | 55 | 55 | 55 |
| 30 | 59 | 59 | 59 | 63 | 63 | 63 | 0 | 0 | 0 | 0 | 0 | 21 | 0 | 0 | 42 | 0 | 0 | 63 |
| 36 | 0 | 9 | 0 | 0 | 9 | 21 | 0 | 9 | 42 | 0 | 9 | 63 | 0 | 18 | 0 | 0 | 18 | 21 |
| 42 | 0 | 18 | 42 | 0 | 18 | 63 | 0 | 27 | 0 | 0 | 27 | 21 | 0 | 27 | 42 | 0 | 27 | 63 |
| 48 | 0 | 36 | 0 | 0 | 36 | 21 | 0 | 36 | 42 | 0 | 36 | 63 | 0 | 45 | 0 | 0 | 45 | 21 |
| 54 | 0 | 45 | 42 | 0 | 45 | 63 | 0 | 54 | 0 | 0 | 54 | 21 | 0 | 54 | 42 | 0 | 54 | 63 |
| 60 | 0 | 63 | 0 | 0 | 63 | 21 | 0 | 63 | 42 | 0 | 63 | 63 | 10 | 0 | 0 | 10 | 0 | 21 |
| 66 | 10 | 0 | 42 | 10 | 0 | 63 | 10 | 9 | 0 | 10 | 9 | 21 | 10 | 9 | 42 | 10 | 9 | 63 |
| 72 | 10 | 18 | 0 | 10 | 18 | 21 | 10 | 18 | 42 | 10 | 18 | 63 | 10 | 27 | 0 | 10 | 27 | 21 |
| 78 | 10 | 27 | 42 | 10 | 27 | 63 | 10 | 36 | 0 | 10 | 36 | 21 | 10 | 36 | 42 | 10 | 36 | 63 |
| 84 | 10 | 45 | 0 | 10 | 45 | 21 | 10 | 45 | 42 | 10 | 45 | 63 | 10 | 54 | 0 | 10 | 54 | 21 |
| 90 | 10 | 54 | 42 | 10 | 54 | 63 | 10 | 63 | 0 | 10 | 63 | 21 | 10 | 63 | 42 | 10 | 63 | 63 |
| 96 | 21 | 0 | 0 | 21 | 0 | 21 | 21 | 0 | 42 | 21 | 0 | 63 | 21 | 9 | 0 | 21 | 9 | 21 |
| 102 | 21 | 9 | 42 | 21 | 9 | 63 | 21 | 18 | 0 | 21 | 18 | 21 | 21 | 18 | 42 | 21 | 18 | 63 |
| 108 | 21 | 27 | 0 | 21 | 27 | 21 | 21 | 27 | 42 | 21 | 27 | 63 | 21 | 36 | 0 | 21 | 36 | 21 |
| 114 | 21 | 36 | 42 | 21 | 36 | 63 | 21 | 45 | 0 | 21 | 45 | 21 | 21 | 45 | 42 | 21 | 45 | 63 |
| 120 | 21 | 54 | 0 | 21 | 54 | 21 | 21 | 54 | 42 | 21 | 54 | 63 | 21 | 63 | 0 | 21 | 63 | 21 |
| 126 | 21 | 63 | 42 | 21 | 63 | 63 | 31 | 0 | 0 | 31 | 0 | 21 | 31 | 0 | 42 | 31 | 0 | 63 |
| 132 | 31 | 9 | 0 | 31 | 9 | 21 | 31 | 9 | 42 | 31 | 9 | 63 | 31 | 18 | 0 | 31 | 18 | 21 |
| 138 | 31 | 18 | 42 | 31 | 18 | 63 | 31 | 27 | 0 | 31 | 27 | 21 | 31 | 27 | 42 | 31 | 27 | 63 |
| 144 | 31 | 36 | 0 | 31 | 36 | 21 | 31 | 36 | 42 | 31 | 36 | 63 | 31 | 45 | 0 | 31 | 45 | 21 |
| 150 | 31 | 45 | 42 | 31 | 45 | 63 | 31 | 54 | 0 | 31 | 54 | 21 | 31 | 54 | 42 | 31 | 54 | 63 |
| 156 | 31 | 63 | 0 | 31 | 63 | 21 | 31 | 63 | 42 | 31 | 63 | 63 | 42 | 0 | 0 | 42 | 0 | 21 |
| 162 | 42 | 0 | 42 | 42 | 0 | 63 | 42 | 9 | 0 | 42 | 9 | 21 | 42 | 9 | 42 | 42 | 9 | 63 |
| 168 | 42 | 18 | 0 | 42 | 18 | 21 | 42 | 18 | 42 | 42 | 18 | 63 | 42 | 27 | 0 | 42 | 27 | 21 |
| 174 | 42 | 27 | 42 | 42 | 27 | 63 | 42 | 36 | 0 | 42 | 36 | 21 | 42 | 36 | 42 | 42 | 36 | 63 |
| 180 | 42 | 45 | 0 | 42 | 45 | 21 | 42 | 45 | 42 | 42 | 45 | 63 | 42 | 54 | 0 | 42 | 54 | 21 |
| 186 | 42 | 54 | 42 | 42 | 54 | 63 | 42 | 63 | 0 | 42 | 63 | 21 | 42 | 63 | 42 | 42 | 63 | 63 |
| 192 | 52 | 0 | 0 | 52 | 0 | 21 | 52 | 0 | 42 | 52 | 0 | 63 | 52 | 9 | 0 | 52 | 9 | 21 |
| 198 | 52 | 9 | 42 | 52 | 9 | 63 | 52 | 18 | 0 | 52 | 18 | 21 | 52 | 18 | 42 | 52 | 18 | 63 |
| 204 | 52 | 27 | 0 | 52 | 27 | 21 | 52 | 27 | 42 | 52 | 27 | 63 | 52 | 36 | 0 | 52 | 36 | 21 |
| 210 | 52 | 36 | 42 | 52 | 36 | 63 | 52 | 45 | 0 | 52 | 45 | 21 | 52 | 45 | 42 | 52 | 45 | 63 |
| 216 | 52 | 54 | 0 | 52 | 54 | 21 | 52 | 54 | 42 | 52 | 54 | 63 | 52 | 63 | 0 | 52 | 63 | 21 |
| 222 | 52 | 63 | 42 | 52 | 63 | 63 | 63 | 0 | 0 | 63 | 0 | 21 | 63 | 0 | 42 | 63 | 0 | 63 |
| 228 | 63 | 9 | 0 | 63 | 9 | 21 | 63 | 9 | 42 | 63 | 9 | 63 | 63 | 18 | 0 | 63 | 18 | 21 |
| 234 | 63 | 18 | 42 | 63 | 18 | 63 | 63 | 27 | 0 | 63 | 27 | 21 | 63 | 27 | 42 | 63 | 27 | 63 |
| 240 | 63 | 36 | 0 | 63 | 36 | 21 | 63 | 36 | 42 | 63 | 36 | 63 | 63 | 45 | 0 | 63 | 45 | 21 |
| 246 | 63 | 45 | 42 | 63 | 45 | 63 | 63 | 54 | 0 | 63 | 54 | 21 | 63 | 54 | 42 | 63 | 54 | 63 |
| 252 | 63 | 63 | 0 | 63 | 63 | 21 | 63 | 63 | 42 | 63 | 63 | 63 | ░░ | ░░ | ░░ | ░░ | ░░ | ░░ |

The first 16 entries in the above color table correspond to the default color palette used in v1.xx of RIPscrip and corresponds directly to the color palette used for 16 color ANSI text. The next 16 colors in the color table above is a 16 level gray-scale used for gray-scale image output and to provide a basic spectrum of grays.

The remaining 224 entries is a "uniform distribution" of RGB colors. The actual organization of the colors is mathematically based such that an arbitrary RGB color value can be mapped to a color value in the default palette with a simple calculation (instead of searching through the entire palette for the closest entry). This block tries to cover as many colors in the color spectrum as possible.

There are four levels of Blue, eight levels of green and seven levels of red. Each block is organized with Blue the color that changes every entry, green the next most changing, and red the least frequently changing. If you have a RED value from 0-6, a GREEN value from 0-7 and a BLUE value from 0-3, you can easily calculate the correct palette index entry with the following equation:

```text
INDEX = 32 + BLUE + GREEN*4 + RED*32
```

Or in C with bit-shifting, you could do it like this:

```text
INDEX = 32 + BLUE + GREEN<<2 + RED<<5
```

The main reason for choosing this color palette was to facilitate the ability to display many color images onto the screen at the same time in 256 color mode without having to alter the color palette for each image. The color representation may not be 100% exact, but it would be close enough with dithering to accurately represent the original image.

The exact determination of this color palette was very carefully chosen. The lowest 16 colors, which happen to default to the basic colors of ANSI color codes (universally used throughout the computer world seemingly), are a good sub-set of colors for basic 16 color operations. The next 16 colors are defined as a dedicated gray-scale color palete (only of use in 256 color modes), and gives a very good breakdown of the gray-scale monotone color palette. The remaining 224 entries are broken down mathematically (as you've seen above) with 7 levels of red, 8 levels of green and 4 levels of blue. This seemingly odd configuration of color distrubution was very scientifcally chosen. _(v2.A4)_

Extensive experimental research has determined that the human eye is more susceptible to particular "hues" of light than others. Specifcally, the human eye is most susceptible to subtle changes in the shade of green than any other color. Next comes red, then finally blue at the very lowest end of the perceptivity scale. If you recall, red is at the lower end of the light spectrum (eg, near infrared), and blue is at the upper end of the spectrum (near ultra-violet). Green is in the middle. This tells us that our eye is most responsive to light in the middle-to-lower bands of the color spectrum. After scientific analysis, our eye was determined to be responsive to the following levels of each color band (comparitively based on an 8 level scale, 1 being lowest): _(v2.A4)_

```text
8 - green
7 - red
4 - blue
```

Taking this information into account, we constructed a default palette which reflected the best distribution of color that the human eye can perceive. By no means is it perfectly suited for all environments, but it is a "best case" situation for most images and environments. As you can undoubtedly guess, a photograph with a lot of blues and violets would be significantly degraded in quality in this color environment, but many typical images where a broad range of colors is used works very well, and when dithering is used, the situation improves even more. _(v2.A4)_

The 256-color-era RIPtel demos build on top of this default table: BLUEFADE.FN reprograms entries 32 onward for its signature blue-fade background (see [RIP_SET_DRAWING_PALETTE](#rip_set_drawing_palette)), gated behind the corpus's ubiquitous `<<IF $COLORS$<"256">>` color-depth dispatch. _Evidence: corpus._

## RIP_COLOR

_Set current Drawing Color for graphics_

|               |            |
| ------------- | ---------- |
| **Level**     | 0          |
| **Command**   | `c`        |
| **Arguments** | `color:CM` |

**Format:** `!|c <color>` **Example:** `!|c0F`

**Attributes used:** Draw Color, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_color)) · HLP (`RIP_Color`) · corpus (359 uses in 49 files) · SyncTERM (ripper.c:14366)

This command sets the color for drawing lines, circles, arcs, rectangles, and other graphics primitives, as well as the color for drawing graphics-text from the [RIP_TEXT](3.0-text-output-and-fonts.md#rip_text) class of commands (not from ASCII/ANSI text). This command does not affect Fill colors or Fill Patterns (see below). It does affect the borders of graphic objects, for example the border of an ellipse drawn with the [RIP_FILLED_OVAL](2.3-shapes-and-fills.md#rip_filled_oval) command when borders are enabled. (The interior of the ellipse would be drawn according to the most recent [RIP_FILL_STYLE](2.3-shapes-and-fills.md#rip_fill_style) command).

In the RIPtel corpus this is the most-used state command of all (359 uses in 49 files). In Color Map mode (the corpus default - the standard prologue sets `M08`) the parameter indexes the 256-entry Drawing Palette; in Direct RGB mode it becomes an [UltraNum](../../GLOSSARY.md)-encoded RGB value whose width follows the [RIP_SET_COLOR_MODE](#rip_set_color_mode) bit setting. HLP error strings pin the 3.0 driver's limits: palette indices 0-255, direct RGB "8 bits per channel only" in this driver.

The `<color>` parameter of this command serves two purposes depending on what Color Mode is currently set. The default mode, Color Map mode, signifies that the color parameter of this command will use the parameter as an index into the 256 color Drawing Palette color mapping table. In this mode, this parameter will use the current Base Math set by the global [RIP_SET_BASE_MATH](1.2-math-and-coordinates.md#rip_set_base_math) command. _(v2.A0)_

In Direct RGB Color Mode, the color parameter will be encoded in UltraNums (regardless of the current Base Math setting). The total number of digits used will vary depending on the number of bits per color component (R, G and B). The following table will provide a breakdown of bits vs. total number of UltraNum digits used for Direct RGB Color codes: _(v2.A0)_

| Bits | Total Digits |
| ---- | ------------ |
| 1    | 1            |
| 2    | 1            |
| 3    | 2            |
| 4    | 2            |
| 5    | 3            |
| 6    | 3            |
| 7    | 4            |
| 8    | 4            |

These numeric values will be an encoded RGB value allowing you to set arbitrary RGB colors directly with the Set Color commands. If the RGB color is not permissable, the closest match from the Color palette table will be located and used. The number of bits of precision used in the encoded RGB value will be determined by the [RIP_SET_COLOR_MODE](#rip_set_color_mode) command. _(v2.A0)_

When Direct RGB Colors Codes are used, the bits for each Red, Green and Blue are encoded as tightly as possible to ensure no wasted space. For example, if 6 bits were used for R, G and B, you would have the following layout in binary form: _(v2.A0)_

```text
rrrrrr gggggg bbbbbb
```

where each of "r", "g" and "b" could be individual ones or zeros. This binary representation of the color code is then converted to UltraNum using the proper number of digits from the preceding table. For example, if you had binary values: _(v2.A0)_

```text
  RED:  011011
GREEN:  001001
 BLUE:  100100
```

You would have the following binary number: _(v2.A0)_

```text
011011 001001 100100 (111,204 decimal)
```

And in UltraNum, the value would be: R9a _(v2.A0)_

When Color Mapping Mode is in use, the color parameter may be shorter than four digits. This is for space savings, as it is allowable in the specification for the last numeric parameter in a parameter list to be "shorter" than the full length. _(v2.A0)_

In Color Map mode, this command chooses one of the colors of the 256-color Drawing Palette defined by the class of Set Palette commands. Here is the default 16 lowest colors of the Desktop Palette (these correspond to the colors of ANSI text graphics): _(v2.A0)_

| 16-Color RIP Palette Color Code | Master 64-Color Palette Color Code (Base-10) | (B-36) | [B-64] | R/G/B (0-3) | Color |
| --- | --- | --- | --- | --- | --- |
| 00 | 0 | (00) | [0] | 0 0 0 | Black |
| 01 | 1 | (01) | [1] | 0 0 2 | Blue |
| 02 | 2 | (02) | [2] | 0 2 0 | Green |
| 03 | 3 | (03) | [3] | 0 2 2 | Cyan |
| 04 | 4 | (04) | [4] | 2 0 0 | Red |
| 05 | 5 | (05) | [5] | 2 0 2 | Magenta |
| 06 | 20 | (0K) | [K] | 2 1 0 | Brown |
| 07 | 7 | (07) | [7] | 2 2 2 | Light Gray |
| 08 | 56 | (1K) | [u] | 1 1 1 | Dark Gray |
| 09 | 57 | (1L) | [v] | 1 1 3 | Light Blue |
| 0A | 58 | (1M) | [w] | 1 3 1 | Light Green |
| 0B | 59 | (1N) | [x] | 1 3 3 | Light Cyan |
| 0C | 60 | (1O) | [y] | 3 1 1 | Light Red |
| 0D | 61 | (1P) | [z] | 3 1 3 | Light Magenta |
| 0E | 62 | (1Q) | [#] | 3 3 1 | Yellow |
| 0F | 63 | (1R) | [@] | 3 3 3 | White |

The raw color values (0-63) correspond to an RGB color definition in which two bits are used for each of the Red, Green and Blue components. The layout of the binary number is shown as follows: _(v2.A0)_

```text
           Primary    Secondary
         ├─────────┤ ├─────────┤
╔═══╤═══╦═══╤═══╤═══╦═══╤═══╤═══╗
║▒▒▒│▒▒▒║   │   │   ║   │   │   ║
║▒▒▒│▒▒▒║ R │ G │ B ║ r │ g │ b ║
║▒▒▒│▒▒▒║   │   │   ║   │   │   ║
╚═══╧═══╩═══╧═══╧═══╩═══╧═══╧═══╝
  80  40  20  10  8   4   2   1  (hex)
  7   6   5   4   3   2   1   0  (position)
```

Notice that each of the R, G and B sections are broken up into two separate bit sections in the color palette entry number. Also, the bits are reversed when they are encoded. Let's look at four separate colors of Red, Green and Blue to see how the bit patterns correspond to the actual Palette entries: _(v2.A0)_

```text
 RED   PALETTE ENTRY    GREEN  PALETTE ENTRY     BLUE  PALETTE ENTRY
 ═══════════════════     ═══════════════════     ═══════════════════
         xxRGBrgb                xxRGBrgb                xxRGBrgb
         ────────                ────────                ────────
 00      00000000        00      00000000        00      00000000
 01      00100000        01      00010000        01      00001000
 10      00000100        10      00000010        10      00000001
 11      00100100        11      00010010        11      00001001
```

Color 00 of the 16-color RIP palette is always the background color (which is typically Black).

## RIP_BACK_COLOR

_Added in RIPscrip v2.A1._

_Set background Drawing Color for graphics_

|               |            |
| ------------- | ---------- |
| **Level**     | 0          |
| **Command**   | `k`        |
| **Arguments** | `color:CM` |

**Format:** `!|k <color>` **Example:** `!|k00`

**Attributes used:** Back Color, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_back_color)) · HLP (`RIP_BackColor`) · corpus (229 uses in 41 files) - not in SyncTERM

This command alters the setting of the background pen drawing color. This color is used for fill operations for the background pixels of the fill as well as some erase functions. The color of the foreground pixels of the fill pattern are specified with a [RIP_FILL_STYLE](2.3-shapes-and-fills.md#rip_fill_style) and [RIP_FILL_PATTERN](2.3-shapes-and-fills.md#rip_fill_pattern) command. Upon a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows), the background color is automatically set to black and remains that way unless overidden by a RIP_BACK_COLOR command.

The background color can also affect the way line patterns/styles appear on the screen. Normally a line pattern is a sequence of on and off pixels where the on pixels are drawn in the normal RIPscrip foreground drawing color as set by the [RIP_COLOR](#rip_color) command. The other pixels (the off pixels) are normally not drawn at all (ie, transparent). When you use the [RIP_LINE_STYLE](2.1-lines.md#rip_line_style) command, you can specify that these off pixels are to be drawn in the current background color (set with this command). See the RIP_LINE_STYLE for exact syntax on using this mode.

See the RIP_COLOR command for an exact description of the `<color>` parameter used in this command (both Color Palette mode and Direct RGB color mode are supported).

The census confirms the 2.00a4 letter assignment beyond doubt - 229 corpus uses, constantly re-tinted in the fade/shadow function scenes, and TEL3X2.MNU comments narrate it directly ("Background color a darkish brown/gold" before dropshadowed [RIP_EXTENDED_FONT_STYLE](3.0-text-output-and-fonts.md#rip_extended_font_style) titles, whose shadows draw in this color).

## RIP_SET_PALETTE

_Set 16-color Desktop Palette from 64-clr palette_

|               |                       |
| ------------- | --------------------- |
| **Level**     | 0                     |
| **Command**   | `Q`                   |
| **Arguments** | `c1:2 c2:2 ... c16:2` |

**Format:** `!|Q <c1> <c2> ... <c16>` **Example:** `!|Q000102030405060708090A0B0C0D0E0F`

**Attributes used:** Draw Color, Back Color, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_set_palette)) · HLP (`RIP_SetPalette`) · SyncTERM (ripper.c:13921) - not observed in the RIPtel demo corpus

This command modifies the 16-color Desktop palette by choosing from the 64 colors in the master palette. This allows you to alter the colors in your RIPscrip graphics scenes. Once a Set Palette command is processed, any colors on the screen that had their corresponding palette entries changed will instantly switch to the new color set (providing the terminal is running in palette mode). You may obtain color cycling effects by using this command. The default 16-color RIP palette is restored by the [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command.

See the [RIP_COLOR](#rip_color) command for an exact description of the RGB valus used in this command.

Color 00 of the 16-color RIP palette is always the screen's background color (which is typically Black).

The 256-color-era demos manipulate the Drawing Palette ([`D`](#rip_set_drawing_palette)/[`d`](#rip_one_drawing_palette)) instead, leaving this 16-color command to legacy scenes.

## RIP_ONE_PALETTE

_Set RGB color of 16-color Desktop Palette_

|               |                   |
| ------------- | ----------------- |
| **Level**     | 0                 |
| **Command**   | `a`               |
| **Arguments** | `color:2 value:2` |

**Format:** `!|a <color> <value>` **Example:** `!|a0202`

**Attributes used:** Draw Color, Back Color, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_one_palette)) · HLP (`RIP_OnePalette`) · corpus (7 uses in LANDSCPE.RIP, LGF1.RIP) · SyncTERM (ripper.c:14221)

This command changes one color in the 16-color Desktop Palette. The color number is sent along with the new color value from the Master Color Palette. The color `<value>` must be in the range of 0-63. Once a Set One Palette command is processed, any colors on the screen that correspond to the `<color>` number will be changed instantly to the new color value (providing the terminal is running in palette mode). You may obtain color cycling effects by using this command. The default RIP palette is restored when by the [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command.

See the [RIP_COLOR](#rip_color) command for an exact description of the RGB values used in this command.

Color 00 of the 16-color RIP palette is always the background color (which is typically Black).

HLP error strings confirm the 0-63 range in the 3.0 driver ("Invalid system palette color value (>63)"). Used sparingly in the corpus for scene-specific tints; palette-cycling animation is also attested by the HLP string "Unable to animate palette".

## RIP_SET_DRAWING_PALETTE

_Added in RIPscrip v2.A0._

_Set Drawing Palette entries to RGB colors_

|               |                                      |
| ------------- | ------------------------------------ |
| **Level**     | 0                                    |
| **Command**   | `D`                                  |
| **Arguments** | `num:2 start:2 bits:1 c1:4 ... cn:4` |

**Format:** `!|D <num> <start> <bits> <c1> ... <cn>` **Example:** `!|D0W0W8000000040008000C000G000K000O000S000W000a000e000i000m000 …`

**Attributes used:** Draw Color, Back Color, Base Math (current setting; color values always UltraNums) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_set_drawing_palette)) · HLP (`RIP_SetDrawingPalette`) · corpus (BLUEFADE.FN, single use - the 256-color faded background) · SyncTERM (ripper.c:9173 - descriptor-only `2#4#2#`, no handler)

This command will set one or more colors in the 256-entry Drawing Palette to arbitrary RGB color mappings. This allows you to customize the Drawing Palette with extended color information beyond what you can normally do with the Desktop Palette. This command is more flexible in nature in that it allows you to access colors between 0-255 and gives you the added flexibility to store more than 2 bits of red, green and blue information thus allowing you to select colors out of a much larger master palette.

The `<num>` parameter specifies how many color entries are contained in this given Palette command. This is used in determining how many bytes long the command should be.

**NOTE:** The four-digit color parameters are not meganums - they are always ULTRANUMS regardless of the setting of the global base-math value! With four digits at base-64 math, you can achieve 24-bits of precision in one four-digit number.

If you break-down the four-digit UltraNum color values into their binary equivalents (three bytes), the MSB would contain the Red component, the LSB would contain the Blue component and the byte in between contains the Green component. The `<bits>` parameter lets you specify the number of bits for each component. Under no circumstances are `<bit>` values above 8 allowed, since this would overflow a four-digit UltraNum parameter (beyond 24 bits).

The `<start>` parameter determines the starting Color Palette Entry number that the first color in the command will be assigned to. Every following parameter will correspond to the next highest Color Palette Entry number.

Color Entry number zero (0) is the screen's background color. It is normally set to RGB color 0/0/0, or Black. Changing this color will alter the background color of the entire screen/environment, so great care should be taken if you alter color number 0.

BLUEFADE.FN's one enormous use (elided in the example above) programs 32 entries starting at entry 32 (`0W`) with 8-bit components to build the signature blue-fade background - the command that gates every demo's `<<IF $COLORS$<"256">>` branch. HLP limits: base ≤255, ≤256 colors per command. SyncTERM knows the opcode only as an unimplemented descriptor whose 6-field shape does not match the real variable-length layout.

## RIP_ONE_DRAWING_PALETTE

_Added in RIPscrip v2.A0._

_Set one Drawing Palette entry to an RGB color_

|               |                              |
| ------------- | ---------------------------- |
| **Level**     | 0                            |
| **Command**   | `d`                          |
| **Arguments** | `entry:2 bits:1 rgb_color:4` |

**Format:** `!|d <entry> <bits> <rgb_color>` **Example:** `!|d0W80000`

**Attributes used:** Draw Color, Back Color, Base Math (current setting; color value always UltraNums) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_one_drawing_palette)) · HLP (`RIP_OneDrawingPalette`) · corpus (65 uses in TUNNEL.RIP) - not in SyncTERM

This command will set a single entry in the Drawing Palette to an arbitrary RGB color. This allows you to customize the Drawing Palette with extended color information beyond what you can normally do with the Desktop Palette. This command is more flexible in nature in that it allows you to access colors between 0-255 and gives you the added flexibility to store more than 2 bits of RGB data - thus allowing you to select colors out of a much larger master palette.

The `<entry>` parameter specifies which Color Palette Entry number will be set with the RGB color data.

**NOTE:** The four-digit color parameters are not MegaNums - they are always ULTRA-NUMS regardless of the setting of the global base-math value! With four digits at base-64 math, you can achieve 24-bits of precision in one four-digit number.

If you break-down the four-digit UltraNum color values into their binary equivalents (three bytes), the MSB would contain the Red component, the LSB would contain the Blue component and the byte in between contains the Green component. This command allows you to specify a number of `<bits>` for each component. Under no circumstances are `<bit>` values above 8 allowed, since this would overflow a four-digit UltraNum parameter (beyond 24 bits).

Color Entry number zero (0) is the screen's background color. It is normally set to RGB color 0/0/0, or Black. Changing this color will alter the background color of the entire screen/environment, so great care should be taken if you alter color number 0.

TUNNEL.RIP hammers this command 65 times (entry `0W` = 32 onward, 8-bit components) to animate its tunnel color ramp.

## RIP_SET_COLOR_MODE

_Added in RIPscrip v2.A0._

_Set the Color Drawing Mode (MAP or DIRECT RGB)_

|               |                 |
| ------------- | --------------- |
| **Level**     | 0               |
| **Command**   | `M`             |
| **Arguments** | `mode:1 bits:1` |

**Format:** `!|M <mode> <bits>` **Example:** `!|M08`

**Attributes used:** Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_set_color_mode)) · HLP (`RIP_SetColorMode`, plus `$COLORMODE$` variable) · corpus (94 uses in 90 files) - not in SyncTERM

This command determines whether Color Mapping mode is in use, or if Direct RGB Colors are being used for color codes. See [Palette Mapping and Direct RGB Mode](#palette-mapping-and-direct-rgb-mode) above for a detailed explanation of the differences between these modes. Arguments shown as `color:CM` in command entries take a color in whichever of these two modes is currently set.

The `<mode>` parameter may take on the following values:

| Mode | Description                  |
| ---- | ---------------------------- |
| 0    | Color Mapping mode (default) |
| 1    | Direct RGB Color mode        |

The `<bits>` parameter is used to determine how many bits are to be parsed in the Direct RGB Color mode. This parameter is ignored if the Color Mapping Mode is in effect.

When in Direct RGB Color Mode, any Color Code parameter in the RIPscrip language that doesn't explicitly state that it uses only Color Map Mode will process a color value as a raw RGB value encoded in the same fashion as the [RIP_SET_DRAWING_PALETTE](#rip_set_drawing_palette) command. These parameters, when in Direct RGB Color Mode, will be in ULTRA-NUM format regardless of the global Base Math settings for compression. Color palette mode though uses the current base math settings for these color parameters.

In Color Mapping Mode, these color parameters will typically not be the lengthy four-digit sequence used in Direct RGB Color Mode. When in Color Mapping Mode, the color parameters used throughout RIPscrip will obey the global Base Math setting - it's only in Direct RGB Color Mode where UltraNums are forced ON for these parameters.

Every corpus prologue sends `!|M08` - mode 0 (color map) with 8 bits - annotated in TELPORT.FN as "Set color palette mapping mode (not RGB encoding)". The standard scene prologue is `!|J10|n2000|M08|fZKQO`. HLP error strings confirm the 3.0 driver's Direct RGB support is 8 bits per channel only ("RGB color mode only supports 8-bit color currently").

Note on the census: the level-0 `M` observed throughout the corpus is _this_ command; the 1.54 [RIP_MOVE](3.0-text-output-and-fonts.md#rip_move) shares the letter pair only in the sense that MOVE is lowercase `m`, which the corpus never uses.

## RIP_SWITCH_PALETTE

_Added in RIPscrip v2.A3._

_Switches to a new color palette_

|               |                 |
| ------------- | --------------- |
| **Level**     | 2               |
| **Command**   | `A`             |
| **Arguments** | `palette_num:2` |

**Format:** `!|2A <palette_num>` **Example:** `!|2A04`

**Attributes used:** Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_switch_palette)) · HLP (`RIP_SwitchPalette`; "Can't protect color palette zero", palette animation strings, `$SCP$`/`$RCP$` variables) - not observed in the RIPtel demo corpus, not in SyncTERM

This command physically switches the currently active drawing color palette. When this happens, any graphics currently on-screen will immediately change colors based on the new palette (providing the terminal is running in a hardware mode that allows for color palettes). If the terminal is running in a mode that doesn't allow for color palettes (ie, 24-bit mode, etc), then only the internal color lookup table is changed for subsequent color palette mapping mode operations.

You are allowed up to 36 separate color palettes to switch between. Possible palette slot numbers are from 0-35 (0-Z). The palettes themselves live in the color palette [data table](7.1-data-tables.md#color-palette-table).

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a proper [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is executed, then all unprotected color palette slots are reset to the default color palette. Also, the current active color palette is reset to palette number 0.

The demos restyle single palettes in place ([`D`](#rip_set_drawing_palette)/[`d`](#rip_one_drawing_palette)) and reset with `$RESET(PAL)$` rather than switching slots.

## RIP_WRITE_MODE

_Set drawing mode for graphics primitives_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `W`      |
| **Arguments** | `mode:2` |

**Format:** `!|W <mode>` **Example:** `!|W00`

**Attributes used:** Write Mode, Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/2.0-color-modes-and-palettes.md#rip_write_mode)) · HLP (`RIP_WriteMode`) · corpus (44 uses in 35 files) · SyncTERM (ripper.c:14062)

This command sets the current drawing mode for most of the graphics primitives:

| Mode | Description                     | Logical |
| ---- | ------------------------------- | ------- |
| 00   | Normal drawing mode (overwrite) | (COPY)  |
| 01   | Exclusive-OR drawing mode       | (XOR)   |
| 02   | Logical OR drawing mode         | (OR)    |
| 03   | Logical AND drawing mode        | (AND)   |
| 04   | Inverse drawing mode            | (NOT)   |

The corpus uses COPY almost exclusively, with a few `03` (AND) uses for masking effects - and one file contains a stray argument of `.`, which the shipping driver's tolerant MegaNum parser accepts (a `.` terminates numeric parsing without error).

### Normal (COPY) mode

In normal mode, things are drawn in the current drawing color over top of whatever is in the graphics viewport. This is the typical mode of operation in a GUI environment.

### XOR mode

In the XOR mode, instead of changing each pixel to the current drawing color, the pixel is merged with the destination pixel using the logical operation XOR. This is a bitwise manipulation of the destination and source pixel values. In a monochrome environment, the following bit combinations would yield the following:

| A   | B   | A XOR B |
| --- | --- | ------- |
| 0   | 0   | 0       |
| 0   | 1   | 1       |
| 1   | 0   | 1       |
| 1   | 1   | 0       |

### OR mode

In the OR mode, instead of changing each pixel to the current drawing color, the pixel is merged with the destination pixel using the logical operation OR. The bits in the source pixel are OR'ed with the bits in the destination pixel to achieve the final result. In a monochrome environment, the following bit combinations would yield the following: _(v2.A1)_

| A   | B   | A OR B |
| --- | --- | ------ |
| 0   | 0   | 0      |
| 0   | 1   | 1      |
| 1   | 0   | 1      |
| 1   | 1   | 1      |

### AND mode

In the AND mode, instead of changing each pixel to the current drawing color, the pixel is merged with the destination pixel using the logical operation AND. The bits in the source pixel are AND'ed with the bits in the destination pixel to achieve the final result. In a monochrome environment, the following bit combinations would yield the following: _(v2.A1)_

| A   | B   | A AND B |
| --- | --- | ------- |
| 0   | 0   | 0       |
| 0   | 1   | 0       |
| 1   | 0   | 0       |
| 1   | 1   | 1       |

### NOT mode

In the NOT mode, the color of the source pixel is completely ignored. The bits in the destination pixel's color are inverted (0's become 1's and 1's become 0's). In other words, black becomes white, light gray becomes dark gray, etc (this is assuming that the color palette is a 16 color palette with default settings - 256 color palettes may react differently depending on the colors defined.

### Scope and color effects

This command affects all line drawing operations (line, rectangle, circle, oval, pie slice, pixel, etc). It also affects any fill-based operations (filled bar, internal parts of a pie slice, filled circle, etc). It only affects level-0 drawing primitives. It also affects fonts that are drawn to the screen (including the default font). _(v2.A1)_

_Editor's note: RIPscrip 1.54 offered only COPY (`00`) and XOR (`01`), and its per-command attribute matrix already applied them to lines, rectangles, polygons, filled polygons, poly-lines, beziers and graphics text - but marked circles, ovals, arcs, oval-arcs, pie slices, bars, pixels and flood fills `Uses Write Mode: NO`. The 2.x draft adds OR, AND and NOT and turns the matrix on for every level-0 drawing primitive, and 3.x carries that forward. (Per-command `Uses Write Mode:` lines in `RIPScrip-1.54.txt` and `RIPScrip-2.0-alpha-4.txt`; see [Canvas, Clipping & Write Modes](../../1.54/techspecs/2.0-canvas-clipping-write-modes.md#write-modes-rip_write_mode).)_

The effects of OR, AND, XOR and NOT can cause distinctly different resultant colors in 16 color modes as compared to 256 color modes. For example, if you have a color of 7 (0111 binary) in a 16 color mode, and you NOT that color, you get 8 (1000 binary). Under a standard 16 color palette, color 7 is light gray and color 8 is dark gray. Under a 256 color palette though, color 7 (00000111 binary) will convert to 248 (11111000 binary). This color is definitely not dark gray - it is by default, an RGB of (63,54,0) which is a shade of brownish yellow. _(v2.A3)_

---

[◀ Prev: 1.4 Terminal & ANSI View](1.4-terminal-ansi-view.md) · [Contents](README.md) · [Next: 2.1 Lines ▶](2.1-lines.md)
